remove introduction class from elements and create div with the class to hold the elements

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   </head>
   <body>
     <h1>Welcome to Fake News Agency Reporting as It Happens</h1>
+    <div class="introduction">
     <h2 class="introduction">Introduction</h2>
     <p class="introduction">Lorem ipsum dolor sit amet, mea at nihil nusquam cotidieque, reque etiam deleniti ad est? Latine facilisis scriptorem sea ea, illud omittantur no vel? Ex nisl rationibus sea, ne pro probatus dignissim. Ad eos quem iudicabit, tantas officiis voluptatum ei sea?
       Oratio aliquid praesent quo ex! Modus percipit ius te? An dolor soleat semper his. Admodum luptatum ad sed. Ius ut latine scripserit, alii indoctum dissentiunt mea ea.
       Ad quo nihil democritum, veniam vituperata id qui? Vero accusam scriptorem usu at. Harum alienum vim ex. Ex eam quaerendum adversarium, at his nobis soleat, vivendum explicari honestatis cu nam. Quis tantas abhorreant eum in, eam debitis civibus deseruisse id!
       Quas feugait comprehensam nam ei? Iuvaret efficiantur et his! Ex has graecis conceptam! Usu no exerci utroque constituam, te vel legendos suavitate?</p>
+    </div>
     <img class="introduction" src="images/news.jpg" alt="News Image">
   </body>
 </html>
